tolk-tester/tests/invalid-syntax/err-3618.tolk
const x = 0b0012;

/**
@compilation_should_fail
@stderr expected top-level declaration, got `2`
 */
